# aethoria-console

./: .eslintrc.json  .gitignore  .vercelignore  AI_SETUP.md  ASSISTANT_MODAL_SETUP.md  ASSISTANT_UI_SETUP.md  CHATBOT_DOCUMENTATION.md  DEPLOYMENT.md  INSTALLATION_SCRIPT.md  LICENSE  PROJECT_STATUS.md  README.md  SCANNING_AND_FIXING_SUMMARY.md  TECHNICAL_SPECIFICATION.md  ai.py  async_tasks.py  audio.py  env.example  game_log.txt  humanoid.urdf  image_generator.py  logging_config.py  main - Copy (2).py  managers.py  migration_script.py  migration_script_v2.py  minimal_chroma_example.py  next.config.js  package-lock.json  package.json  pyproject.toml  requirements.txt  save_load.py  session_data.json  summaries.py  systems.py  tailwind.config.js  tailwind.config.ts  test-api.js  test-env.js  (+9 more)
api/: env.example  main.py  requirements.txt
app/: globals.css  layout.tsx  page.tsx  test.tsx
components/: AIChat.tsx  APITest.tsx  CartridgeSelector.tsx  CharacterCreator.tsx  CharacterSelector.tsx  CharacterSheet.tsx  ChatBubble.tsx  ChatContainer.tsx  ChatMessage.tsx  ChatSidebar.tsx  CombatSystem.tsx  CombatUI.tsx  DiceRoller3D.tsx  DieRoller.tsx  ErrorBoundary.tsx  ErrorLogger.tsx  FeaturesSection.tsx  GameConsole.tsx  GameInterface.tsx  GameState.tsx  Header.tsx  Help.tsx  HeroSection.tsx  Inventory.tsx  LoadingSpinner.tsx  MessageRenderer.tsx  NarratorOrb.tsx  QuestLog.tsx  SaveManager.tsx  Settings.tsx  VirtualScroll.tsx  VoiceRecognition.tsx  VoiceRecorder.tsx  VoiceSynthesis.tsx  WorldMap.tsx  attachment.tsx
cursor instructions/: AETHORIA_PHASE1_DEVELOPMENT.txt  (+14 more)
(+444 files in other folders)
